@@ -1,5 +1,8 @@
 Changes with Apache 2.0.37
 
+  *) Fix the combination of mod_cgid, mod_setuexec, and mod_userdir.
+     PR 7810  [Colm MacCarthaigh <colmmacc@redbrick.dcu.ie>]
+
   *) Fix suexec execution of CGI scripts from mod_include.
      PR 7791, 8291  [Colm MacCarthaigh <colmmacc@redbrick.dcu.ie>]
 
